tests/error/inout_errors/barrier_drop_lval.err
Error: Drop violation (at $FILE:10:3)
   | 
 8 | @no_type_check
 9 | def main() -> None:
10 |    q = qubit()
   |    ^ Variable `q` with non-droppable type `qubit` is leaked

Help: Make sure that `q` is consumed or returned to avoid the leak

Guppy compilation failed due to 1 previous error
